force-app/main/default/objects/forcerules__Rule_Filter__c/forcerules__Rule_Filter__c.object-meta.xml
<CustomObject>
    <label>Rule Filter</label>
    <nameField>
        <displayFormat>RF{0000}</displayFormat>
        <label>Filter #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>