force-app/main/default/objects/forcerules__Rule_Filter__c/fields/forcerules__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Field_Name__c</fullName>
    <inlineHelpText>API name of the Selected Field</inlineHelpText>
    <label>Field Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>