force-app/main/default/objects/forcerules__Rule_Filter__c/fields/forcerules__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>forcerules__Field_Type</valueSetName>
    </valueSet>
</CustomField>