force-app/main/default/objects/forcerules__Rule_Filter__c/fields/forcerules__Operator__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>forcerules__Field_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>forcerules__Operator</valueSetName>
    </valueSet>
</CustomField>