force-app/main/default/objects/forcerules__Rule_Filter__c/fields/forcerules__Rule__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Rule__c</fullName>
    <label>Rule</label>
    <referenceTo>forcerules__Rule__c</referenceTo>
    <relationshipLabel>Rule Filters</relationshipLabel>
    <relationshipName>Rule_Filters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>