force-app/main/default/objects/forcerules__Rule_Filter__c/fields/forcerules__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>