force-app/main/default/objects/forcerules__Rule_Filter__c/fields/forcerules__Value__c.field-meta.xml
<CustomField>
    <fullName>forcerules__Value__c</fullName>
    <label>Value</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>