force-app/main/default/objects/forcerules__Rule_Filter__c/validationRules/forcerules__ValidateBooleanValue.validationRule-meta.xml
<ValidationRule>
    <fullName>forcerules__ValidateBooleanValue</fullName>
    <active>true</active>
    <description>Avoid adding value other than the true/false or null for boolean fields</description>
    <errorConditionFormula>IF(ISPICKVAL( forcerules__Field_Type__c , &apos;boolean&apos;), IF( OR( UPPER(forcerules__Value__c)  == &apos;TRUE&apos;, UPPER(forcerules__Value__c) == &apos;FALSE&apos;), false, true), false)</errorConditionFormula>
    <errorMessage>Please enter correct value in boolean field</errorMessage>
</ValidationRule>