force-app/main/default/objects/forcerules__Rule_Filter__c/validationRules/forcerules__ValidateNumericValue.validationRule-meta.xml
<ValidationRule>
    <fullName>forcerules__ValidateNumericValue</fullName>
    <active>true</active>
    <description>Avoid adding value other than the number for numeric fields</description>
    <errorConditionFormula>IF(OR(ISPICKVAL( forcerules__Field_Type__c , &apos;double&apos;),ISPICKVAL( forcerules__Field_Type__c , &apos;currency&apos;)),  IF( ISNUMBER( forcerules__Value__c ), false, true), false)</errorConditionFormula>
    <errorMessage>Please enter correct value in numeric field</errorMessage>
</ValidationRule>