force-app/main/default/objects/forcerules__Rule_Filter__c/listViews/forcerules__All.listView-meta.xml
<ListView>
    <fullName>forcerules__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>